# infrastructure_prototype

./: Cargo.toml
src/: input.rs  input_logger.rs  main.rs  utils.rs
src/error/: init.rs  log_init.rs  mod.rs
src/model/: counter_model.rs  mod.rs  model_manager.rs
src/model/error/: mod.rs  model_not_free.rs  update.rs
src/presenter/: mod.rs
