[package]
name = "infrastructure_prototype"
version = "0.1.0"
authors = ["f3kilo <f3kilo@yandex.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.22.0"
ash = "0.30.0"
log = "0.4.8"
slog = { version = "2.5.2", features = ["max_level_trace", "release_max_level_warn"] }
sloggers = "0.3.5"
tinyfiledialogs = "3.3.9"
settings_path = "0.1.0"